--- a/_config.yml
+++ b/_config.yml
@@ -98,11 +98,11 @@ theme_mode: dark # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTr64KZAjZoP0hhWqKYzoDd6Nt053Xnr67hA&s
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
-social_preview_image: # string, local or CORS resources
+social_preview_image: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTr64KZAjZoP0hhWqKYzoDd6Nt053Xnr67hA&s # string, local or CORS resources
 
 # boolean type, the global switch for TOC in posts.
 toc: true
